--- a/html-coverage/Frete/Entity/User.php.html
+++ b/html-coverage/Frete/Entity/User.php.html
@@ -2,12 +2,12 @@
 <html lang="en">
  <head>
   <meta charset="UTF-8">
-  <title>Code Coverage for /opt/project/src/Frete/Service/Shipping/ShippingInterface.php</title>
+  <title>Code Coverage for /opt/project/src/Frete/Entity/User.php</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="../../../_css/bootstrap.min.css?v=10.1.1" rel="stylesheet" type="text/css">
-  <link href="../../../_css/octicons.css?v=10.1.1" rel="stylesheet" type="text/css">
-  <link href="../../../_css/style.css?v=10.1.1" rel="stylesheet" type="text/css">
-  <link href="../../../_css/custom.css" rel="stylesheet" type="text/css">
+  <link href="../../_css/bootstrap.min.css?v=10.1.1" rel="stylesheet" type="text/css">
+  <link href="../../_css/octicons.css?v=10.1.1" rel="stylesheet" type="text/css">
+  <link href="../../_css/style.css?v=10.1.1" rel="stylesheet" type="text/css">
+  <link href="../../_css/custom.css" rel="stylesheet" type="text/css">
  </head>
  <body>
   <header>
@@ -16,11 +16,10 @@
      <div class="col-md-12">
       <nav aria-label="breadcrumb">
        <ol class="breadcrumb">
-         <li class="breadcrumb-item"><a href="../../../index.html">/opt/project/src</a></li>
-         <li class="breadcrumb-item"><a href="../../index.html">Frete</a></li>
-         <li class="breadcrumb-item"><a href="../index.html">Service</a></li>
-         <li class="breadcrumb-item"><a href="index.html">Shipping</a></li>
-         <li class="breadcrumb-item active">ShippingInterface.php</li>
+         <li class="breadcrumb-item"><a href="../../index.html">/opt/project/src</a></li>
+         <li class="breadcrumb-item"><a href="../index.html">Frete</a></li>
+         <li class="breadcrumb-item"><a href="index.html">Entity</a></li>
+         <li class="breadcrumb-item active">User.php</li>
 
        </ol>
       </nav>
@@ -58,6 +57,20 @@
        <td class=" small"><div align="right">0&nbsp;/&nbsp;0</div></td>
       </tr>
 
+      <tr>
+       <td class=""><abbr title="src\Frete\Entity\User">User</abbr></td>
+       <td class=" big"></td>
+       <td class=" small"><div align="right">n/a</div></td>
+       <td class=" small"><div align="right">0&nbsp;/&nbsp;0</div></td>
+       <td class=" big"></td>
+       <td class=" small"><div align="right">n/a</div></td>
+       <td class=" small"><div align="right">0&nbsp;/&nbsp;0</div></td>
+       <td class=" small">0</td>
+       <td class=" big"></td>
+       <td class=" small"><div align="right">n/a</div></td>
+       <td class=" small"><div align="right">0&nbsp;/&nbsp;0</div></td>
+      </tr>
+
 
      </tbody>
     </table>
@@ -66,12 +79,13 @@
 <tbody>
     <tr class=" d-flex"><td  class="col-1 text-right"><a id="1" href="#1">1</a></td><td class="col-11 codeLine"><span class="default">&lt;?php</span></td></tr>
     <tr class=" d-flex"><td  class="col-1 text-right"><a id="2" href="#2">2</a></td><td class="col-11 codeLine"></td></tr>
-    <tr class=" d-flex"><td  class="col-1 text-right"><a id="3" href="#3">3</a></td><td class="col-11 codeLine"><span class="keyword">namespace</span><span class="default">&nbsp;</span><span class="default">src\Frete\Service\Shipping</span><span class="keyword">;</span></td></tr>
+    <tr class=" d-flex"><td  class="col-1 text-right"><a id="3" href="#3">3</a></td><td class="col-11 codeLine"><span class="keyword">namespace</span><span class="default">&nbsp;</span><span class="default">src\Frete\Entity</span><span class="keyword">;</span></td></tr>
     <tr class=" d-flex"><td  class="col-1 text-right"><a id="4" href="#4">4</a></td><td class="col-11 codeLine"></td></tr>
-    <tr class=" d-flex"><td  class="col-1 text-right"><a id="5" href="#5">5</a></td><td class="col-11 codeLine"><span class="keyword">interface</span><span class="default">&nbsp;</span><span class="default">ShippingInterface</span></td></tr>
+    <tr class=" d-flex"><td  class="col-1 text-right"><a id="5" href="#5">5</a></td><td class="col-11 codeLine"><span class="keyword">class</span><span class="default">&nbsp;</span><span class="default">User</span></td></tr>
     <tr class=" d-flex"><td  class="col-1 text-right"><a id="6" href="#6">6</a></td><td class="col-11 codeLine"><span class="keyword">{</span></td></tr>
-    <tr class=" d-flex"><td  class="col-1 text-right"><a id="7" href="#7">7</a></td><td class="col-11 codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">public</span><span class="default">&nbsp;</span><span class="keyword">function</span><span class="default">&nbsp;</span><span class="default">calculaFrete</span><span class="keyword">(</span><span class="keyword">)</span><span class="keyword">;</span></td></tr>
-    <tr class=" d-flex"><td  class="col-1 text-right"><a id="8" href="#8">8</a></td><td class="col-11 codeLine"><span class="keyword">}</span></td></tr>
+    <tr class=" d-flex"><td  class="col-1 text-right"><a id="7" href="#7">7</a></td><td class="col-11 codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">public</span><span class="default">&nbsp;</span><span class="default">string</span><span class="default">&nbsp;</span><span class="default">$name</span><span class="keyword">;</span></td></tr>
+    <tr class=" d-flex"><td  class="col-1 text-right"><a id="8" href="#8">8</a></td><td class="col-11 codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">public</span><span class="default">&nbsp;</span><span class="default">string</span><span class="default">&nbsp;</span><span class="default">$zipCode</span><span class="keyword">;</span></td></tr>
+    <tr class=" d-flex"><td  class="col-1 text-right"><a id="9" href="#9">9</a></td><td class="col-11 codeLine"><span class="keyword">}</span></td></tr>
 
 </tbody>
 </table>
@@ -89,9 +103,9 @@
     </a>
    </footer>
   </div>
-  <script src="../../../_js/jquery.min.js?v=10.1.1" type="text/javascript"></script>
-  <script src="../../../_js/popper.min.js?v=10.1.1" type="text/javascript"></script>
-  <script src="../../../_js/bootstrap.min.js?v=10.1.1" type="text/javascript"></script>
-  <script src="../../../_js/file.js?v=10.1.1" type="text/javascript"></script>
+  <script src="../../_js/jquery.min.js?v=10.1.1" type="text/javascript"></script>
+  <script src="../../_js/popper.min.js?v=10.1.1" type="text/javascript"></script>
+  <script src="../../_js/bootstrap.min.js?v=10.1.1" type="text/javascript"></script>
+  <script src="../../_js/file.js?v=10.1.1" type="text/javascript"></script>
  </body>
 </html>
