--- a/html-coverage/Frete/Entity/dashboard.html
+++ b/html-coverage/Frete/Entity/dashboard.html
@@ -2,12 +2,12 @@
 <html lang="en">
  <head>
   <meta charset="UTF-8">
-  <title>Dashboard for /opt/project/src/Frete/Service/CarrinhoDeCompra</title>
+  <title>Dashboard for /opt/project/src/Frete/Entity</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="../../../_css/bootstrap.min.css?v=10.1.1" rel="stylesheet" type="text/css">
-  <link href="../../../_css/nv.d3.min.css?v=10.1.1" rel="stylesheet" type="text/css">
-  <link href="../../../_css/style.css?v=10.1.1" rel="stylesheet" type="text/css">
-  <link href="../../../_css/custom.css" rel="stylesheet" type="text/css">
+  <link href="../../_css/bootstrap.min.css?v=10.1.1" rel="stylesheet" type="text/css">
+  <link href="../../_css/nv.d3.min.css?v=10.1.1" rel="stylesheet" type="text/css">
+  <link href="../../_css/style.css?v=10.1.1" rel="stylesheet" type="text/css">
+  <link href="../../_css/custom.css" rel="stylesheet" type="text/css">
  </head>
  <body>
   <header>
@@ -16,10 +16,9 @@
      <div class="col-md-12">
       <nav aria-label="breadcrumb">
        <ol class="breadcrumb">
-         <li class="breadcrumb-item"><a href="../../../index.html">/opt/project/src</a></li>
-         <li class="breadcrumb-item"><a href="../../index.html">Frete</a></li>
-         <li class="breadcrumb-item"><a href="../index.html">Service</a></li>
-         <li class="breadcrumb-item"><a href="index.html">CarrinhoDeCompra</a></li>
+         <li class="breadcrumb-item"><a href="../../index.html">/opt/project/src</a></li>
+         <li class="breadcrumb-item"><a href="../index.html">Frete</a></li>
+         <li class="breadcrumb-item"><a href="index.html">Entity</a></li>
          <li class="breadcrumb-item active">(Dashboard)</li>
 
        </ol>
@@ -142,9 +141,9 @@
     </p>
    </footer>
   </div>
-  <script src="../../../_js/jquery.min.js?v=10.1.1" type="text/javascript"></script>
-  <script src="../../../_js/d3.min.js?v=10.1.1" type="text/javascript"></script>
-  <script src="../../../_js/nv.d3.min.js?v=10.1.1" type="text/javascript"></script>
+  <script src="../../_js/jquery.min.js?v=10.1.1" type="text/javascript"></script>
+  <script src="../../_js/d3.min.js?v=10.1.1" type="text/javascript"></script>
+  <script src="../../_js/nv.d3.min.js?v=10.1.1" type="text/javascript"></script>
   <script type="text/javascript">
 $(document).ready(function() {
   nv.addGraph(function() {
@@ -157,7 +156,7 @@ $(document).ready(function() {
       .yAxis.tickFormat(d3.format('d'));
 
     d3.select('#classCoverageDistribution svg')
-      .datum(getCoverageDistributionData([0,0,0,0,0,0,0,0,0,0,0,1], "Class Coverage"))
+      .datum(getCoverageDistributionData([0,0,0,0,0,0,0,0,0,0,0,3], "Class Coverage"))
       .transition().duration(500).call(chart);
 
     nv.utils.windowResize(chart.update);
@@ -175,7 +174,7 @@ $(document).ready(function() {
       .yAxis.tickFormat(d3.format('d'));
 
     d3.select('#methodCoverageDistribution svg')
-      .datum(getCoverageDistributionData([0,0,0,0,0,0,0,0,0,0,0,2], "Method Coverage"))
+      .datum(getCoverageDistributionData([0,0,0,0,0,0,0,0,0,0,0,4], "Method Coverage"))
       .transition().duration(500).call(chart);
 
     nv.utils.windowResize(chart.update);
@@ -225,7 +224,7 @@ $(document).ready(function() {
     chart.yAxis.axisLabel('Cyclomatic Complexity');
 
     d3.select('#classComplexity svg')
-      .datum(getComplexityData([[100,3,"<a href=\"Compra.php.html#9\">src\\Frete\\Service\\CarrinhoDeCompra\\Compra<\/a>"]], 'Class Complexity'))
+      .datum(getComplexityData([[100,11,"<a href=\"Carrinho.php.html#7\">src\\Frete\\Entity\\Carrinho<\/a>"],[100,1,"<a href=\"Product.php.html#5\">src\\Frete\\Entity\\Product<\/a>"],[100,0,"<a href=\"User.php.html#5\">src\\Frete\\Entity\\User<\/a>"]], 'Class Complexity'))
       .transition()
       .duration(500)
       .call(chart);
@@ -249,7 +248,7 @@ $(document).ready(function() {
     chart.yAxis.axisLabel('Method Complexity');
 
     d3.select('#methodComplexity svg')
-      .datum(getComplexityData([[100,1,"<a href=\"Compra.php.html#12\">src\\Frete\\Service\\CarrinhoDeCompra\\Compra::__construct<\/a>"],[100,2,"<a href=\"Compra.php.html#16\">src\\Frete\\Service\\CarrinhoDeCompra\\Compra::calculoDaCompra<\/a>"]], 'Method Complexity'))
+      .datum(getComplexityData([[100,3,"<a href=\"Carrinho.php.html#13\">src\\Frete\\Entity\\Carrinho::totalPrice<\/a>"],[100,4,"<a href=\"Carrinho.php.html#27\">src\\Frete\\Entity\\Carrinho::insertCompraCarrinho<\/a>"],[100,4,"<a href=\"Carrinho.php.html#51\">src\\Frete\\Entity\\Carrinho::removeCompraCarrinho<\/a>"],[100,1,"<a href=\"Product.php.html#10\">src\\Frete\\Entity\\Product::getProduto<\/a>"]], 'Method Complexity'))
       .transition()
       .duration(500)
       .call(chart);
