--- a/html-coverage/Frete/Entity/index.html
+++ b/html-coverage/Frete/Entity/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
  <head>
   <meta charset="UTF-8">
-  <title>Code Coverage for /opt/project/src/Frete/Service</title>
+  <title>Code Coverage for /opt/project/src/Frete/Entity</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../../_css/bootstrap.min.css?v=10.1.1" rel="stylesheet" type="text/css">
   <link href="../../_css/octicons.css?v=10.1.1" rel="stylesheet" type="text/css">
@@ -18,7 +18,7 @@
        <ol class="breadcrumb">
          <li class="breadcrumb-item"><a href="../../index.html">/opt/project/src</a></li>
          <li class="breadcrumb-item"><a href="../index.html">Frete</a></li>
-         <li class="breadcrumb-item active">Service</li>
+         <li class="breadcrumb-item active">Entity</li>
          <li class="breadcrumb-item">(<a href="dashboard.html">Dashboard</a>)</li>
 
        </ol>
@@ -46,33 +46,13 @@
       <tr>
        <td class="success">Total</td>
        <td class="success big">       <div class="progress">
-         <div class="progress-bar bg-success" role="progressbar" aria-valuenow="92.31" aria-valuemin="0" aria-valuemax="100" style="width: 92.31%">
-           <span class="sr-only">92.31% covered (success)</span>
+         <div class="progress-bar bg-success" role="progressbar" aria-valuenow="100.00" aria-valuemin="0" aria-valuemax="100" style="width: 100.00%">
+           <span class="sr-only">100.00% covered (success)</span>
          </div>
        </div>
 </td>
-       <td class="success small"><div align="right">92.31%</div></td>
-       <td class="success small"><div align="right">12&nbsp;/&nbsp;13</div></td>
-       <td class="warning big">       <div class="progress">
-         <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="87.50" aria-valuemin="0" aria-valuemax="100" style="width: 87.50%">
-           <span class="sr-only">87.50% covered (warning)</span>
-         </div>
-       </div>
-</td>
-       <td class="warning small"><div align="right">87.50%</div></td>
-       <td class="warning small"><div align="right">7&nbsp;/&nbsp;8</div></td>
-       <td class="warning big">       <div class="progress">
-         <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="66.67" aria-valuemin="0" aria-valuemax="100" style="width: 66.67%">
-           <span class="sr-only">66.67% covered (warning)</span>
-         </div>
-       </div>
-</td>
-       <td class="warning small"><div align="right">66.67%</div></td>
-       <td class="warning small"><div align="right">2&nbsp;/&nbsp;3</div></td>
-      </tr>
-
-      <tr>
-       <td class="success"><img src="../../_icons/file-directory.svg" class="octicon" /><a href="CarrinhoDeCompra/index.html">CarrinhoDeCompra</a></td>
+       <td class="success small"><div align="right">100.00%</div></td>
+       <td class="success small"><div align="right">27&nbsp;/&nbsp;27</div></td>
        <td class="success big">       <div class="progress">
          <div class="progress-bar bg-success" role="progressbar" aria-valuenow="100.00" aria-valuemin="0" aria-valuemax="100" style="width: 100.00%">
            <span class="sr-only">100.00% covered (success)</span>
@@ -89,6 +69,26 @@
 </td>
        <td class="success small"><div align="right">100.00%</div></td>
        <td class="success small"><div align="right">2&nbsp;/&nbsp;2</div></td>
+      </tr>
+
+      <tr>
+       <td class="success"><img src="../../_icons/file-code.svg" class="octicon" /><a href="Carrinho.php.html">Carrinho.php</a></td>
+       <td class="success big">       <div class="progress">
+         <div class="progress-bar bg-success" role="progressbar" aria-valuenow="100.00" aria-valuemin="0" aria-valuemax="100" style="width: 100.00%">
+           <span class="sr-only">100.00% covered (success)</span>
+         </div>
+       </div>
+</td>
+       <td class="success small"><div align="right">100.00%</div></td>
+       <td class="success small"><div align="right">23&nbsp;/&nbsp;23</div></td>
+       <td class="success big">       <div class="progress">
+         <div class="progress-bar bg-success" role="progressbar" aria-valuenow="100.00" aria-valuemin="0" aria-valuemax="100" style="width: 100.00%">
+           <span class="sr-only">100.00% covered (success)</span>
+         </div>
+       </div>
+</td>
+       <td class="success small"><div align="right">100.00%</div></td>
+       <td class="success small"><div align="right">3&nbsp;/&nbsp;3</div></td>
        <td class="success big">       <div class="progress">
          <div class="progress-bar bg-success" role="progressbar" aria-valuenow="100.00" aria-valuemin="0" aria-valuemax="100" style="width: 100.00%">
            <span class="sr-only">100.00% covered (success)</span>
@@ -100,31 +100,44 @@
       </tr>
 
       <tr>
-       <td class="warning"><img src="../../_icons/file-directory.svg" class="octicon" /><a href="Shipping/index.html">Shipping</a></td>
-       <td class="warning big">       <div class="progress">
-         <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="88.89" aria-valuemin="0" aria-valuemax="100" style="width: 88.89%">
-           <span class="sr-only">88.89% covered (warning)</span>
+       <td class="success"><img src="../../_icons/file-code.svg" class="octicon" /><a href="Product.php.html">Product.php</a></td>
+       <td class="success big">       <div class="progress">
+         <div class="progress-bar bg-success" role="progressbar" aria-valuenow="100.00" aria-valuemin="0" aria-valuemax="100" style="width: 100.00%">
+           <span class="sr-only">100.00% covered (success)</span>
          </div>
        </div>
 </td>
-       <td class="warning small"><div align="right">88.89%</div></td>
-       <td class="warning small"><div align="right">8&nbsp;/&nbsp;9</div></td>
-       <td class="warning big">       <div class="progress">
-         <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="83.33" aria-valuemin="0" aria-valuemax="100" style="width: 83.33%">
-           <span class="sr-only">83.33% covered (warning)</span>
+       <td class="success small"><div align="right">100.00%</div></td>
+       <td class="success small"><div align="right">4&nbsp;/&nbsp;4</div></td>
+       <td class="success big">       <div class="progress">
+         <div class="progress-bar bg-success" role="progressbar" aria-valuenow="100.00" aria-valuemin="0" aria-valuemax="100" style="width: 100.00%">
+           <span class="sr-only">100.00% covered (success)</span>
          </div>
        </div>
 </td>
-       <td class="warning small"><div align="right">83.33%</div></td>
-       <td class="warning small"><div align="right">5&nbsp;/&nbsp;6</div></td>
-       <td class="danger big">       <div class="progress">
-         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="50.00" aria-valuemin="0" aria-valuemax="100" style="width: 50.00%">
-           <span class="sr-only">50.00% covered (danger)</span>
+       <td class="success small"><div align="right">100.00%</div></td>
+       <td class="success small"><div align="right">1&nbsp;/&nbsp;1</div></td>
+       <td class="success big">       <div class="progress">
+         <div class="progress-bar bg-success" role="progressbar" aria-valuenow="100.00" aria-valuemin="0" aria-valuemax="100" style="width: 100.00%">
+           <span class="sr-only">100.00% covered (success)</span>
          </div>
        </div>
 </td>
-       <td class="danger small"><div align="right">50.00%</div></td>
-       <td class="danger small"><div align="right">1&nbsp;/&nbsp;2</div></td>
+       <td class="success small"><div align="right">100.00%</div></td>
+       <td class="success small"><div align="right">1&nbsp;/&nbsp;1</div></td>
+      </tr>
+
+      <tr>
+       <td class=""><img src="../../_icons/file-code.svg" class="octicon" /><a href="User.php.html">User.php</a></td>
+       <td class=" big"></td>
+       <td class=" small"><div align="right">n/a</div></td>
+       <td class=" small"><div align="right">0&nbsp;/&nbsp;0</div></td>
+       <td class=" big"></td>
+       <td class=" small"><div align="right">n/a</div></td>
+       <td class=" small"><div align="right">0&nbsp;/&nbsp;0</div></td>
+       <td class=" big"></td>
+       <td class=" small"><div align="right">n/a</div></td>
+       <td class=" small"><div align="right">0&nbsp;/&nbsp;0</div></td>
       </tr>
 
 
